# ws-rooms

./: .env  Cargo.toml  Dockerfile  README.md  fly.toml  graph.md
.cargo/: config.toml
bindings/: ClientMessageType.ts  CursorUpdate.ts  Operation.ts  ServerMessageType.ts  SharedList.ts  Uint8Array.ts  Y.Doc.ts  Y.Map<any>.ts  YrsStorage.ts
src/: lib.rs  main.rs  server.rs
src/api/: mod.rs
src/api/presence/: mod.rs
src/api/rooms/: mod.rs
src/api/storage/: mod.rs
src/room/: client_state.rs  error.rs  manager.rs  message.rs  mod.rs  subscription.rs
src/room/presence/: cursor_presence.rs  mod.rs  presentation_presence.rs
src/room/storage/: mod.rs  shared_list.rs  shared_presentation.rs  yrs_storage.rs
src/ws/: fsm.rs  mod.rs
