[package]
name = "ws_rooms"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {version = "1.42.0", features = ["full"]}
axum = { version = "0.8.2", features = ["macros", "ws"] }
serde = { version = "1.0.215", features = ["derive"] }
futures-util = "0.3.31"
serde_json = "1.0.105"
thiserror = "2.0.12"
uuid = { version = "1.12.0", features = ["v4", "serde"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.2"
tokio-tungstenite = "0.26.2"
url = "2.5.4"
chrono = { version = "0.4.41", features = ["serde"] }
